データ登録機能追加

--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the clients controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#clients-list {
+  border: 1px black solid;
+  border-collapse: collapse;
+
+  th{
+    border: 1px black solid;
+  }
+  td {
+    border: 1px black solid;
+  }
+}
