新規登録画面実装

--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -9,3 +9,12 @@
     border: 1px black solid;
   }
 }
+
+#client-new {
+  margin: auto;
+  width: 900px;
+}
+
+.form-label{
+  text-align: right;
+}
