--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,3 +1,23 @@
+/*
+* {
+  box-sizing: border-box;
+  border: solid red 1px;
+}
+*/
+
+/*  */
+html, body {
+  margin: 0;
+  padding: 0;
+}
+.container {
+  max-width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+
+
 #clients-list {
   border: 1px black solid;
   border-collapse: collapse;
@@ -8,11 +28,6 @@
   td {
     border: 1px black solid;
   }
-}
-
-#client-new {
-  margin: auto;
-  width: 900px;
 }
 
 .form-label{
