--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,81 +1,86 @@
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :sei, "姓" %></div>
-  <div class="col-md-2"><%= form.text_field :sei %></div>
-  <div class="col-md-2 form-label"><%= form.label :mei, "名" %></div>
-  <div class="col-md-2"><%= form.text_field :mei %></div>
+  <div class="col-md-2"><%= form.text_field :sei, class: "form-control" %></div>
+  <div class="col-md-2 form-label" style="width: 70px;"><%= form.label :mei, "名" %></div>
+  <div class="col-md-2"><%= form.text_field :mei, class: "form-control" %></div>
   <div class="col-md-4"></div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :kana_sei, "セイ" %></div>
-  <div class="col-md-2"><%= form.text_field :kana_sei %></div>
-  <div class="col-md-2 form-label"><%= form.label :kana_mei, "メイ" %></div>
-  <div class="col-md-2"><%= form.text_field :kana_mei %></div>
+  <div class="col-md-2"><%= form.text_field :kana_sei, class: "form-control" %></div>
+  <div class="col-md-2 form-label" style="width: 70px;"><%= form.label :kana_mei, "メイ" %></div>
+  <div class="col-md-2"><%= form.text_field :kana_mei, class: "form-control" %></div>
   <div class="col-md-4"></div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :sex, "性別" %></div>
-  <div class="col-md-2">男<%= form.radio_button :sex, 0 %>　女<%= form.radio_button :sex, 1 %></div>
+  <div class="col-md-2">
+    <label class="checkbox-inline" style="padding: 0;"><%= form.radio_button :sex, 0 %>男</label>
+    <label class="checkbox-inline" style="padding: 0;"><%= form.radio_button :sex, 1 %>女</label>
+  </div>
   <div class="col-md-8"></div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :birthday, "生年月日" %></div>
-  <div class="col-md-3">
-    <span>年</span>
-    <%= form.text_field :birthday_year, size: "6" %>
-    <span style="margin-left: 15px;">月日</span>
-    <%= form.text_field :birthday_month_day, size: "6" %>
+  <div class="col-md-4">
+    <div class="col-md-1" style="padding: 0; text-align: right; width: 15px;">年</div>
+    <div class="col-md-3" style="padding-left: 0; width: 75px;"><%= form.text_field :birthday_year, class: "form-control", maxlength: "4", style: "ime-mode: disabled;" %></div>
+    <div class="col-md-2" style="padding: 0; text-align: right; width: 30px;">月日</div>
+    <div class="col-md-3" style="padding-left: 0; width: 75px;"><%= form.text_field :birthday_month_day, class: "form-control", maxlength: "4", style: "ime-mode: disabled;" %></div>
+    <div class="col-md-3"></div>
   </div>
-  <div class="col-md-7"></div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :postal_code, "郵便番号" %></div>
-  <div class="col-md-10"><input type="text" name="zip11" size="10" maxlength="8" onKeyUp="AjaxZip3.zip2addr(this,'','addr11','addr11');"></div>
+  <div class="col-md-10" style="width: 110px;"><input type="text" name="zip11" class="form-control" maxlength="7" style="ime-mode: disabled;" onKeyUp="AjaxZip3.zip2addr(this,'','addr11','addr11');"></div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :address, "住所" %></div>
-  <div class="col-md-10"><input type="text" name="addr11" size="80"></div>
+  <div class="col-md-8"><input type="text" name="addr11" class="form-control"></div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :tel, "電話番号" %></div>
-  <div class="col-md-10">
-    <%= form.text_field :tel1, size: "4" %>-
-    <%= form.text_field :tel2, size: "4" %>-
-    <%= form.text_field :tel3, size: "4" %>
+  <div class="col-md-4">
+    <div class="col-md-3" style="padding: 0; width: 60px;"><%= form.text_field :tel1, class: "form-control", maxlength: "4", style: "ime-mode: disabled;" %></div>
+    <div class="col-md-1" style="padding: 0; padding-top: 5px; text-align: center;">-</div>
+    <div class="col-md-3" style="padding: 0; width: 60px;"><%= form.text_field :tel2, class: "form-control", maxlength: "4", style: "ime-mode: disabled;" %></div>
+    <div class="col-md-1" style="padding: 0; padding-top: 5px; text-align: center;">-</div>
+    <div class="col-md-3" style="padding: 0; width: 60px;"><%= form.text_field :tel3, class: "form-control", maxlength: "4", style: "ime-mode: disabled;" %></div>
   </div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :mail, "メールアドレス" %></div>
-  <div class="col-md-10">
-    <%= form.text_field :mail, id: "email", size: "60" %>
+  <div class="col-md-8">
+    <%= form.text_field :mail, id: "email", class: "form-control", style: "ime-mode: disabled;" %>
   </div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :douki, "動機" %></div>
   <div class="col-md-10">
     <%= form.select :douki, Client::DOUKIES %>
   </div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :shoukaisha, "紹介者" %></div>
-  <div class="col-md-10">
-    <%= form.text_field :shoukaisha %>
+  <div class="col-md-4">
+    <%= form.text_field :shoukaisha, class: "form-control" %>
   </div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :douki_etc, "動機　その他" %></div>
-  <div class="col-md-10">
-    <%= form.text_field :douki_etc %>
+  <div class="col-md-8">
+    <%= form.text_field :douki_etc, class: "form-control" %>
   </div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :memo_client, "お客様用　メモ" %></div>
-  <div class="col-md-10">
-    <%= form.text_area :memo_client %>
+  <div class="col-md-8">
+    <%= form.text_area :memo_client, class: "form-control" %>
   </div>
 </div>
-<div class="row">
+<div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :memo_admin, "管理者用　メモ" %></div>
-  <div class="col-md-10">
-    <%= form.text_area :memo_admin %>
+  <div class="col-md-8">
+    <%= form.text_area :memo_admin, class: "form-control" %>
   </div>
 </div>
