--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,6 +1,6 @@
 <div id="client-new">
   <%= form_for @client do |form| %>
     <%= render "form", form: form %>
-    <p style="text-align: center"><%= form.submit %></p>
+    <div style="text-align: center"><button type="submit" class="btn btn-default" onclick="submit();">登録</button></div>
   <% end %>
 </div>
