新規登録画面、ヘッダーのデザイン修正

--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -9,13 +9,20 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-image: url("diamond_upholstery.png");
+
 }
 .container {
   max-width: 940px;
   margin: 0 auto;
   padding: 0 10px;
 }
+.header{
 
+}
+.footer{
+
+}
 
 
 #clients-list {
