--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
   <!-- フッター -->
   <div class="footer">
     <div class="container">
+      <%= render "shared/footer" %>
     </div>
   </div>
   </body>
