--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -30,13 +30,14 @@
     <div class="col-md-3"></div>
   </div>
 </div>
+
 <div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :postal_code, "郵便番号" %></div>
-  <div class="col-md-10" style="width: 110px;"><input type="tel" name="zip11" class="form-control" maxlength="7" onKeyUp="AjaxZip3.zip2addr(this,'','addr11','addr11');"></div>
+  <div class="col-md-10" style="width: 110px;"><input type="tel" name="zip11" class="form-control" maxlength="7" value="<%= @client.postal_code %>" onKeyUp="AjaxZip3.zip2addr(this,'','addr11','addr11');"></div>
 </div>
 <div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :address, "住所" %></div>
-  <div class="col-md-8"><input type="text" name="addr11" class="form-control"></div>
+  <div class="col-md-8"><input type="text" name="addr11" class="form-control" value="<%= @client.address %>" ></div>
 </div>
 <div class="row form-group">
   <div class="col-md-2 form-label"><%= form.label :tel, "電話番号" %></div>
