--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,11 +1,11 @@
-<div id="client-new">
-  <h4 style="float: left;">新しい顧客データを作成します。</h4>
+<div id="client-edit">
+  <h4 style="float: left;">顧客データを編集します。</h4>
   <div style="text-align: right"><%= link_to "一覧へ戻る", { :controller => "clients", :action => "index" }, { :class => "btn btn-default" }  %></div>
   <div style="clear:both;"></div>
   <hr style="margin-top: 0; border: 1px solid black">
   <%= form_for @client do |form| %>
       <%= render "form", form: form %>
-      <div style="margin-left: 155px;"><button type="submit" class="btn btn-primary" onclick="submit();">登録</button></div>
+      <div style="margin-left: 155px;"><button type="submit" class="btn btn-primary" onclick="submit();">更新</button></div>
   <% end %>
   <hr style="border: 1px solid black">
 </div>
