ページネーション

--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -27,6 +27,7 @@ html, body {
   border: 1px black solid;
   border-collapse: collapse;
   background-color: #ffffff;
+  margin-bottom: 0;
 
   th{
     background-color: Black;
