--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,14 +4,14 @@
 <hr style="margin-top: 0; border: 1px solid black">
 <table id="clients-list" class="table table-hover">
   <tr>
-    <th>No</th>
+    <th>作成日時</th>
     <th>氏名</th>
     <th>住所</th>
     <th></th>
   </tr>
   <% @clients.each_with_index do |client, idx| %>
     <tr>
-      <td style="text-align: center"><%= idx +1 %></td>
+      <td><%= client.created_at.strftime('%Y/%m/%d %H:%M') %></td>
       <td><%= client.sei %>　<%= client.mei %></td>
       <td><%= client.address %></td>
       <td style="text-align: center">
@@ -20,4 +20,7 @@
     </tr>
   <% end %>
 </table>
-<hr style="border: 1px solid black">
+<div style="text-align: center;">
+  <%= will_paginate @clients, renderer: BootstrapPagination::Rails  %>
+</div>
+<hr style="border: 1px solid black; margin-top: 0;">
