--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -22,6 +22,14 @@ html, body {
 .footer{
 }
 
+#shared_errors {
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  background-color: red;
+  margin-bottom: 10px;
+}
+
 
 #clients-list {
   border: 1px black solid;
